accepetd and material accepted search api via test-config